--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
+<!DOCTYPE html>
 <html>
-<head> </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+  <script src='script.js'></script>
+</head>
 <body>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="coinpaprika.js"></script>
-<script>
-    (async () => {
-        console.log(await cp.global());
-    })();
-</script> 
-<div class='001'> </div>
+  <h1>Authors</h1>
+  <ul id="authors"></ul>
 </body>
 </html>
 <!-- https://api.coinpaprika.com/
