now something works
yep

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<option selected>Choose...</option>				
 					</select>
 					<div class="input-group-append">
-						<button class="btn btn-outline-secondary" type="button" id="button">Button</button>
+						<button class="btn btn-outline-secondary" type="button" id="button" onclick="myFunction()">Button</button>
 					</div>
 				</div>
 			</div>
