--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
 
-		<script src="main.js"></script>
+		<script src="main.js" defer></script>
 
 		<title>
 			Szymek 2k20
@@ -24,7 +24,7 @@
 						<option selected>Choose...</option>				
 					</select>
 					<div class="input-group-append">
-						<button class="btn btn-outline-secondary" type="button" id="button" onclick="myFunction()">Button</button>
+						<button class="btn btn-outline-secondary" type="button" id="button" >Button</button>
 					</div>
 				</div>
 			</div>
