--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 					</select>
 					<div class="input-group-append">
 						<button class="btn btn-outline-secondary" type="button" id="button">Button</button>
-						<div id='testowy'></div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<br><div id='testowy'></div>
 	</body>
 </html>
 
